--- a/css/styles.css
+++ b/css/styles.css
@@ -2327,3 +2327,62 @@
   margin: 0;
   overflow: visible;
   clip: auto; }
+
+@font-face {
+  font-family: 'Century Gothic Italic';
+  src: url("../fonts/CenturyGothic-Italic.eot");
+  src: url("../fonts/CenturyGothic-Italic.eot?#iefix") format("embedded-opentype"), url("../fonts/CenturyGothic-Italic.woff") format("woff"), url("../fonts/CenturyGothic-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Century Gothic';
+  src: url("../fonts/CenturyGothic.eot");
+  src: url("../fonts/CenturyGothic.eot?#iefix") format("embedded-opentype"), url("../fonts/CenturyGothic.woff") format("woff"), url("../fonts/CenturyGothic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Century Gothic Bold';
+  src: url("../fonts/CenturyGothic-Bold.eot");
+  src: url("../fonts/CenturyGothic-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/CenturyGothic-Bold.woff") format("woff"), url("../fonts/CenturyGothic-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal; }
+
+body {
+  font-family: "Century Gothic"; }
+  body h1,
+  body h2,
+  body h3,
+  body h4,
+  body strong {
+    font-family: "Century Gothic Bold"; }
+  body hr {
+    display: none; }
+  body .no-gutter > [class*='col-'] {
+    padding-right: 0;
+    padding-left: 0; }
+
+.navbar.navbar-default {
+  position: relative;
+  padding: .5em 0; }
+  .navbar.navbar-default .container {
+    position: relative;
+    padding-right: 30px; }
+    .navbar.navbar-default .container .navbar-brand {
+      text-indent: -99999px;
+      width: 251px;
+      height: 57px;
+      background-image: url(../img/logo.png); }
+    .navbar.navbar-default .container .tog-search {
+      display: none;
+      position: absolute;
+      top: 50px; }
+    .navbar.navbar-default .container .menu-m-container {
+      float: right; }
+    .navbar.navbar-default .container i {
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 15px;
+      display: block; }
