--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,6 +1,7 @@
 //----------- HEADER --------------//
 .navbar {
 	&.navbar-default {
+		margin: 0;
 		position: relative;
 		padding: .5em 0;
 		.container{
