--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -116,7 +116,7 @@ body {
 							float: right;
 							margin: 1em 0;
 							display: inline-block;
-							margin-right: 1em;
+							margin-left: .4em;
 							&::after{
 								content: " >";
 								display: inline-block;
@@ -145,5 +145,13 @@ body {
 				}
 			}// item post
 		}//end bottom news
+		.bottom-networks{
+			padding: 2em 0 3em;
+			background-color: $gray-1;
+			iframe{
+				width: 100%;
+				min-height: 360px;
+			}
+		}//end bottom
 	}// end page
 }//body
