--- a/css/styles.css
+++ b/css/styles.css
@@ -2394,6 +2394,9 @@ body {
       top: 15px;
       display: block; }
 
+.navbar.navbar-fixed-top {
+  position: fixed !important; }
+
 /*____________________________________
  
  HOME
@@ -2529,7 +2532,46 @@ body.page-template-home-tpl .bottom-news article {
 
 body.page-template-home-tpl .bottom-networks {
   padding: 2em 0 3em;
-  background-color: #E6E7E8; }
+  background-color: #E6E7E8;
+  margin: 2em auto; }
   body.page-template-home-tpl .bottom-networks iframe {
     width: 100%;
     min-height: 360px; }
+
+body.page-template-home-tpl .home-services header {
+  position: relative;
+  display: block;
+  margin: 1em auto 2em; }
+  body.page-template-home-tpl .home-services header h3 {
+    text-transform: uppercase;
+    color: #008eab;
+    background-color: #ffffff; }
+    body.page-template-home-tpl .home-services header h3::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 5px;
+      width: #008eab;
+      position: absolute;
+      top: 40%;
+      left: 0; }
+
+body.page-template-home-tpl .home-services .services {
+  border: 3px solid #ffffff;
+  position: relative; }
+  body.page-template-home-tpl .home-services .services .thumbs img {
+    width: 100%;
+    height: auto; }
+  body.page-template-home-tpl .home-services .services .caption {
+    position: absolute;
+    background-color: rgba(0, 142, 171, 0.63);
+    width: 100%;
+    bottom: 0;
+    left: 0; }
+    body.page-template-home-tpl .home-services .services .caption h3 {
+      text-transform: uppercase;
+      color: #ffffff;
+      padding: 1em;
+      margin: 0; }
+  body.page-template-home-tpl .home-services .services.item-1, body.page-template-home-tpl .home-services .services.item-4 {
+    background-color: rgba(0, 142, 171, 0.63); }
