--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -148,10 +148,62 @@ body {
 		.bottom-networks{
 			padding: 2em 0 3em;
 			background-color: $gray-1;
+			margin: 2em auto;
 			iframe{
 				width: 100%;
 				min-height: 360px;
 			}
 		}//end bottom
+		//Home services
+		.home-services{
+			header {
+				position: relative;
+				display: block;
+				margin: 1em auto 2em;
+				h3 {
+					text-transform: uppercase;
+					color: $blue-1;
+					background-color: $white;
+					&::after{
+						content: "";
+						display: block;
+						width: 100%;
+						height: 5px;
+						width: $blue-1;
+						position: absolute;
+						top: 40%;
+						left: 0; 
+					}
+				}
+			} //end header
+			//item
+			.services {
+				border: 3px solid $white;
+				position:relative;
+				.thumbs {
+					img {
+						width: 100%;
+						height: auto;
+					}
+				}
+				.caption {
+					position: absolute;
+					background-color: $blue-op1;
+					width: 100%;
+					bottom: 0;
+					left: 0;
+					h3{
+						text-transform: uppercase;
+						color: $white;
+						padding: 1em;
+						margin: 0;
+					}
+				}
+				&.item-1,
+				&.item-4 {
+					background-color: $blue-op1;
+				}
+			}
+		}// end services
 	}// end page
 }//body
