--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -169,10 +169,11 @@ body {
 						display: block;
 						width: 100%;
 						height: 5px;
-						width: $blue-1;
+						width: 88%;
+						background-color: $blue-1;
 						position: absolute;
 						top: 40%;
-						left: 0; 
+						right: 0; 
 					}
 				}
 			} //end header
@@ -201,7 +202,9 @@ body {
 				}
 				&.item-1,
 				&.item-4 {
-					background-color: $blue-op1;
+					.caption {
+						background-color: $blue-op2;						
+					}
 				}
 			}
 		}// end services
