--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -9,5 +9,6 @@ $white : #ffffff;
 $blue-1 : #008eab;
 $blue-2 : #014d71;
 $blue-op1 : rgba(0, 142, 171, 0.63);
+$blue-op2 : rgba(97, 218, 243, 0.63);
 $gray : #BCBEC0;
 $gray-1 : #E6E7E8;
