--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -6,9 +6,16 @@ $century-bd : 'Century Gothic Bold';
 //Colors
 $black : #000000;
 $white : #ffffff;
-$blue-1 : #008eab;
+$white-gr: #F1F2F2;
+$blue-1 : #018EAA;
 $blue-2 : #014d71;
 $blue-op1 : rgba(0, 142, 171, 0.63);
 $blue-op2 : rgba(97, 218, 243, 0.63);
 $gray : #BCBEC0;
 $gray-1 : #E6E7E8;
+
+//screens
+$tablet-width: 768px;
+$desktop-width: 1024px;
+$sm-desktop-width: 981px;
+$big-desktop-width: 1481px;
