--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,6 +4,7 @@
 		margin: 0;
 		position: relative;
 		padding: .5em 0;
+		border-bottom: 4px solid $blue-2;
 		.container{
 			position: relative;
 			padding-right: 30px;
