--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -8,7 +8,7 @@ $black : #000000;
 $white : #ffffff;
 $white-gr: #F1F2F2;
 $blue-1 : #018EAA;
-$blue-2 : #014d71;
+$blue-2 : #0D6A7E;
 $blue-op1 : rgba(0, 142, 171, 0.63);
 $blue-op2 : rgba(97, 218, 243, 0.63);
 $gray : #BCBEC0;
