--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,4 +10,8 @@
 //sections
 @import "_home";
 @import "_about";
+@import "_services";
+@import "_clients";
+@import "_news";
+@import "_contact";
 @import "_footer";
