--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -10,7 +10,7 @@
 				color: $white;
 				font-weight: bold;
 				border-right: 1px solid $white;
-				margin: 0 1.4em;
+				padding: 0 1.4em;
 			}
 		}
 	}
