--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,6 +14,7 @@
 				width: 251px;
 				height: 57px;
 				background-image: url(../img/logo.png);
+				padding: 2em 0 1em;
 			}
 			//hide search
 			.tog-search {
