--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -13,6 +13,7 @@ $blue-op1 : rgba(0, 142, 171, 0.63);
 $blue-op2 : rgba(97, 218, 243, 0.63);
 $gray : #BCBEC0;
 $gray-1 : #E6E7E8;
+$gray-3 : #F2F2F2;
 
 //screens
 $tablet-width: 768px;
