--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -106,6 +106,20 @@ body {
 			bottom: 30px;
 		}
 	}
+
+	//circle icon
+	.circle-icon {
+		display: block;
+		width: 40px;
+		height: 40px;
+		line-height: 40px;
+		font-size: 2em;
+		text-align: center;
+		border: 1px solid $gray;
+		color: $blue-1;
+		border-radius: 100%;
+		background-color: white;
+	}
 	
 	//sidebar
 	aside{
@@ -129,6 +143,17 @@ body {
 		}
 	}
 
+	.link-info{
+		display: inline-block;
+		color: black;
+		background-color: $white;
+		border: solid 1px $blue-1;
+		text-transform: capitalize;
+		text-align: center;
+		padding:  .5em 2em;
+		margin: 1em 2em;
+		font-weight: bold;
+	}//permalink
 
 }
 
